--- a/package.json
+++ b/package.json
@@ -9,6 +9,64 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
-    "cordova-ios": "4.5.5"
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "^2.0.1",
+    "cordova-plugin-facebook4": "^2.3.0",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-google-analytics": "^1.8.6",
+    "cordova-plugin-googleplus": "^5.3.0",
+    "cordova-plugin-inappbrowser": "^3.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-stripe": "^1.5.3",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "es6-promise-plugin": "^4.2.2",
+    "iod": "1.1.1",
+    "onesignal-cordova-plugin": "^2.3.3"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-stripe": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-crop": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "2370687279825311",
+        "APP_NAME": "Bended Elbow",
+        "ANDROID_SDK_VERSION": "4.+"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.996585340804-s298122ffio18439l6271qtk0vr2l67p"
+      },
+      "onesignal-cordova-plugin": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
