--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "An Ionic project",
   "devDependencies": {
+    "@ionic/lab": "1.0.9",
+    "@ionic/v1-toolkit": "1.0.8",
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
@@ -65,8 +67,8 @@
       "onesignal-cordova-plugin": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
